--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "@andxor/jquery-ui-touch-punch-fix": "^1.0.2",
         "bootstrap": "^5.1.3",
-        "jquery-ui-touch-punch": "^0.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "shuffle": "^0.2.5",
