--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
         "build": "NODE_ENV=production webpack"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.5",
-        "@babel/preset-env": "^7.16.11",
-        "@babel/preset-react": "^7.16.7",
-        "@svgr/webpack": "^6.2.1",
-        "babel-loader": "^8.2.3",
-        "css-loader": "^6.6.0",
+        "@babel/core": "^7.19.3",
+        "@babel/preset-env": "^7.19.3",
+        "@babel/preset-react": "^7.18.6",
+        "@svgr/webpack": "^6.4.0",
+        "babel-loader": "^8.2.5",
+        "css-loader": "^6.7.1",
         "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.5.3",
-        "postcss": "^8.4.6",
-        "postcss-loader": "^6.2.1",
-        "postcss-preset-env": "^7.4.1",
-        "sass": "^1.49.8",
-        "sass-loader": "^12.6.0",
-        "webpack": "^5.69.1",
-        "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.7.4"
+        "mini-css-extract-plugin": "^2.6.1",
+        "postcss": "^8.4.17",
+        "postcss-loader": "^7.0.1",
+        "postcss-preset-env": "^7.8.2",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.0.2",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
     },
     "dependencies": {
         "@andxor/jquery-ui-touch-punch-fix": "^1.0.2",
-        "bootstrap": "^5.1.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "@popperjs/core": "^2.11.6",
+        "bootstrap": "^5.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "shuffle": "^0.2.5",
-        "webpack-jquery-ui": "^2.0.1"
+        "webpack-jquery-ui": "^2.0.1",
+        "zondicons": "^1.2.0"
     },
     "browserslist": [
         "last 2 versions",
